location page: add a responsive location page (except airpad pro and nest hub max)

--- a/index.html
+++ b/index.html
@@ -224,28 +224,36 @@
   <section class="py-12">
     <div class="container mx-auto px-4">
       <h2 class="text-3xl lg:text-4xl font-bold text-center mb-8 bg-gradient-to-bl from-[#dfb9b9] to-[#0fabf3] bg-clip-text text-transparent">Our Watch Models</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
 
         <div class="bg-gray-100 p-6 rounded-2xl text-center">
           <img src="./assets/imgs/watches/assisted_living-removebg-preview.png" alt="Model 1" class="w-32 sm:w-48 h-32 sm:h-48 mx-auto mb-4">
-          <h3 class="text-lg sm:text-2xl font-semibold text-white">BitHealth Pro</h3>
+          <h3 class="text-lg sm:text-2xl font-semibold text-[#080f18]">BitHealth Pro</h3>
           <p class="text-gray-500 text-sm sm:text-base">Designed for advanced health tracking with premium features.</p>
-          <p class="text-lg font-bold mt-4">$299</p>
+          <p class="text-lg font-bold mt-4">Ksh 5,999</p>
         </div>
 
         <div class="bg-gray-100 p-6 rounded-lg text-center">
           <img src="./assets/imgs/watches/watchfaces-removebg-preview.png" alt="Model 2" class="w-32 sm:w-48 h-32 sm:h-48 mx-auto mb-4">
-          <h3 class="text-lg sm:text-2xl font-semibold text-white">BitHealth Active</h3>
+          <h3 class="text-lg sm:text-2xl font-semibold text-[#080f18]">BitHealth Active</h3>
           <p class="text-gray-500 text-sm sm:text-base">Ideal for fitness enthusiasts with sports tracking capabilities.
           </p>
-          <p class="text-lg font-bold mt-4">$199</p>
+          <p class="text-lg font-bold mt-4">Ksh 3,999</p>
         </div>
         <div class="bg-gray-100 p-6 rounded-lg text-center">
           <img src="./assets/imgs/watches/4G_smartwatch-removebg-preview.png" alt="Model 3" class="w-32 sm:w-48 h-32 sm:h-48 mx-auto mb-4">
-          <h3 class="text-lg sm:text-2xl font-semibold text-white">BitHealth Lite</h3>
+          <h3 class="text-lg sm:text-2xl font-semibold text-[#080f18]">BitHealth Lite</h3>
           <p class="text-gray-500 text-sm sm:text-base">An affordable option with essential health monitoring features.
           </p>
-          <p class="text-lg font-bold mt-4">$149</p>
+          <p class="text-lg font-bold mt-4">Ksh 1,499</p>
+        </div>
+
+        <div class="bg-gray-100 p-6 rounded-lg text-center">
+          <img src="./assets/imgs/watches/healhsensors-removebg-preview.png" alt="Model 4" class="w-32 sm:w-48 h-32 sm:h-48 mx-auto mb-4">
+          <h3 class="text-lg sm:text-2xl font-semibold text-[#080f18]">BitHealth Senior</h3>
+          <p class="text-gray-500 text-sm sm:text-base">The best option for elderly people to monitor health their conditions.
+          </p>
+          <p class="text-lg font-bold mt-4">Ksh 7,499</p>
         </div>
       </div>
     </div>
@@ -256,25 +264,25 @@
         <div class="bg-gray-100 p-6 rounded-lg text-center">
           <img src="./assets/imgs/team/samuel mwangi.jpg" alt="Samuel Mwangi"
             class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4">
-          <h3 class="text-lg sm:text-xl font-semibold">Samuel Mwangi</h3>
+          <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">Samuel Mwangi</h3>
           <p class="text-gray-500">CEO & Founder</p>
           <p class="mt-4 text-sm sm:text-base text-gray-700">Samuel leads the vision and direction of BitHealth, with over
             15 years of experience in the tech industry.</p>
         </div>
 
         <div class="bg-gray-100 p-6 rounded-lg text-center">
-          <img src="./assets/imgs/team/samuel mwangi.jpg" alt="Janwe Njeri"
+          <img src="./assets/imgs/team/jane-njeri.jpg" alt="Jane Njeri"
             class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4">
-          <h3 class="text-lg sm:text-xl font-semibold">Jane Njeri</h3>
+          <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">Jane Njeri</h3>
           <p class="text-gray-500">CTO</p>
           <p class="mt-4 text-sm sm:text-base text-gray-700">Jane oversees the development of BitHealth's innovative
             technology and leads the engineering team.</p>
         </div>
 
         <div class="bg-gray-100 p-6 rounded-lg text-center">
-          <img src="./assets/imgs/team/samuel mwangi.jpg" alt="Team Member 3"
+          <img src="./assets/imgs/team/Yasmin Zawadi.jpg" alt="Team Member 3"
             class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4">
-          <h3 class="text-lg sm:text-xl font-semibold">Yasmin Zawadi</h3>
+          <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">Yasmin Zawadi</h3>
           <p class="text-gray-500">Chief Medical Officer</p>
           <p class="mt-4 text-sm sm:text-base text-gray-700">Yasmin ensures BitHealth's devices meet the highest
             standards for health and safety.</p>
@@ -283,7 +291,7 @@
         <div class="bg-gray-100 p-6 rounded-lg text-center">
           <img src="./assets/imgs/team/samuel mwangi.jpg" alt="Team Member 4"
             class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4">
-          <h3 class="text-lg sm:text-xl font-semibold">John Jefferson</h3>
+          <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">John Jefferson</h3>
           <p class="text-gray-500">Marketing Director</p>
           <p class="mt-4 text-sm sm:text-base text-gray-700">John leads marketing efforts, connecting our products to
             the health-conscious community.</p>
@@ -342,22 +350,12 @@
       <h2 class="text-3xl lg:text-4xl font-bold text-center mb-8 text-[#0fabf3]">Get In Touch</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
-          <h3 class="text-2xl font-semibold mb-4">Contact Information</h3>
-          <p class="text-gray-600 mb-4">We'd love to hear from you! Whether you have a question about our products or need assistance, our team is ready to help.</p>
-          <ul class="space-y-4">
-            <li>
-              <span class="font-semibold">Email:</span>
-              <a href="mailto:info@bithealth.com" class="text-blue-600 hover:underline">info@bithealth.com</a>
-            </li>
-            <li>
-              <span class="font-semibold">Phone:</span>
-              <a href="tel:+123456789" class="text-blue-600 hover:underline">+1 234 567 89</a>
-            </li>
-            <li>
-              <span class="font-semibold">Location:</span>
-              <p class="text-gray-600">1234 Health St, Wellness City, WS 56789</p>
-            </li>
-          </ul>
+          <h3 class="text-2xl font-semibold mb-4 text-center">Location</h3>
+            <div class="w-180 h-80 mx-auto">
+                <div class="map-container shadow-lg">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.846304521725!2d36.79814067577996!3d-1.2647554356046302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1791a3266197%3A0x1b878049a1937f81!2sKipro%20Center%20Dental%20Clinic!5e0!3m2!1sen!2ske!4v1732196627667!5m2!1sen!2ske" width="100%" height="300" style="border:0;" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
         </div>
         
         <div>
