images: add a responsive images (except airpad pro and nest hub max)

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         </div>
 
         <div class="bg-gray-100 p-6 rounded-lg text-center">
-          <img src="./assets/imgs/watches/healhsensors-removebg-preview.png" alt="Model 4" class="w-32 sm:w-48 h-32 sm:h-48 mx-auto mb-4">
+          <img src="./assets/imgs/watches/healhsensors-removebg-preview.png" alt="Model 4" class="w-32 sm:w-48 h-32 sm:h-48 mx-auto mb-4 object-cover">
           <h3 class="text-lg sm:text-2xl font-semibold text-[#080f18]">BitHealth Senior</h3>
           <p class="text-gray-500 text-sm sm:text-base">The best option for elderly people to monitor health their conditions.
           </p>
@@ -263,7 +263,7 @@
 
         <div class="bg-gray-100 p-6 rounded-lg text-center">
           <img src="./assets/imgs/team/samuel mwangi.jpg" alt="Samuel Mwangi"
-            class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4">
+            class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4 object-cover">
           <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">Samuel Mwangi</h3>
           <p class="text-gray-500">CEO & Founder</p>
           <p class="mt-4 text-sm sm:text-base text-gray-700">Samuel leads the vision and direction of BitHealth, with over
@@ -272,7 +272,7 @@
 
         <div class="bg-gray-100 p-6 rounded-lg text-center">
           <img src="./assets/imgs/team/jane-njeri.jpg" alt="Jane Njeri"
-            class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4">
+            class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4 object-cover">
           <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">Jane Njeri</h3>
           <p class="text-gray-500">CTO</p>
           <p class="mt-4 text-sm sm:text-base text-gray-700">Jane oversees the development of BitHealth's innovative
@@ -281,7 +281,7 @@
 
         <div class="bg-gray-100 p-6 rounded-lg text-center">
           <img src="./assets/imgs/team/Yasmin Zawadi.jpg" alt="Team Member 3"
-            class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4">
+            class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4 object-cover">
           <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">Yasmin Zawadi</h3>
           <p class="text-gray-500">Chief Medical Officer</p>
           <p class="mt-4 text-sm sm:text-base text-gray-700">Yasmin ensures BitHealth's devices meet the highest
@@ -290,7 +290,7 @@
 
         <div class="bg-gray-100 p-6 rounded-lg text-center">
           <img src="./assets/imgs/team/samuel mwangi.jpg" alt="Team Member 4"
-            class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4">
+            class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4 object-cover">
           <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">John Jefferson</h3>
           <p class="text-gray-500">Marketing Director</p>
           <p class="mt-4 text-sm sm:text-base text-gray-700">John leads marketing efforts, connecting our products to
@@ -304,11 +304,11 @@
   <section class="text-black bg-[#fff] flex flex-col py-12 mx-5 justify-center content-center rounded-xl">
     <div class="container mx-auto px-4">
       <h2 class="text-3xl lg:text-4xl font-bold text-center mb-8 text-[#0fabf3]">Pricing</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
 
         <div class="bg-white p-6 rounded-lg shadow-md text-center">
           <h3 class="text-xl sm:text-2xl font-semibold mb-4">Basic Plan</h3>
-          <p class="text-3xl sm:text-4xl font-bold mb-4">$19<span class="text-base font-medium">/month</span></p>
+          <p class="text-3xl sm:text-4xl font-bold mb-4">Ksh 1,900<span class="text-base font-medium">/month</span></p>
           <ul class="text-gray-600 text-sm sm:text-base mb-6">
             <li class="mb-2">Heart Rate Monitoring</li>
             <li class="mb-2">Blood Pressure Tracking</li>
@@ -321,7 +321,7 @@
 
         <div class="bg-white p-6 rounded-lg shadow-md text-center">
           <h3 class="text-xl sm:text-2xl font-semibold mb-4">Standard Plan</h3>
-          <p class="text-3xl sm:text-4xl font-bold mb-4">$29<span class="text-base font-medium">/month</span></p>
+          <p class="text-3xl sm:text-4xl font-bold mb-4">Ksh 2,900<span class="text-base font-medium">/month</span></p>
           <ul class="text-gray-600 text-sm sm:text-base mb-6">
             <li class="mb-2">All Basic Plan Features</li>
             <li class="mb-2">Oxygen Level Monitoring</li>
@@ -333,7 +333,19 @@
         </div>
         <div class="bg-white p-6 rounded-lg shadow-md text-center">
           <h3 class="text-xl sm:text-2xl font-semibold mb-4">Premium Plan</h3>
-          <p class="text-3xl sm:text-4xl font-bold mb-4">$49<span class="text-base font-medium">/month</span></p>
+          <p class="text-3xl sm:text-4xl font-bold mb-4">Ksh 4,999<span class="text-base font-medium">/month</span></p>
+          <ul class="text-gray-600 text-sm sm:text-base mb-6">
+            <li class="mb-2">All Standard Plan Features</li>
+            <li class="mb-2">Priority Support</li>
+            <li class="mb-2">Personalized Health Coaching</li>
+            <li class="mb-2">Lifetime Warranty</li>
+          </ul>
+          <a href="#" class="inline-block bg-blue-600 text-white px-4 sm:px-6 py-2 rounded-lg font-semibold">Choose
+            Plan</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md text-center">
+          <h3 class="text-xl sm:text-2xl font-semibold mb-4">Assisted Plan</h3>
+          <p class="text-3xl sm:text-4xl font-bold mb-4">Ksh 6,999<span class="text-base font-medium">/month</span></p>
           <ul class="text-gray-600 text-sm sm:text-base mb-6">
             <li class="mb-2">All Standard Plan Features</li>
             <li class="mb-2">Priority Support</li>
