--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="m-0 p-0 bg-origin-border bg-[#080f18] text-white overflow-x-hidden">
-  <header class="t-0 w-screen">
+  <header class="bg-[#080f18]">
     <nav class="flex flex-row justify-between sm:justify-around items-center text-base px-0 py-3">
       <a class="w-30 h-30 p-0 cursor-pointer" href="#">
         <img src="./assets/imgs/bitHealth-nav.png" alt="BitHealth logo" class="object-cover">
@@ -66,13 +66,13 @@
         <p class="text-4xl pl-3 pr-20 sm:pr-5 hover:text-[#0fabf3] transition-colors duration-300 cursor-pointer"><i class="fa-solid fa-circle-play"></i></p>
         <p class="text-2xl self-center bg-gradient-to-bl  from-[#fff] to-[#64748b] bg-clip-text text-transparent capitalize tracking-wide font-light"> Your gateway to medical responsibility</p> 
       </div> -->
-      <p class="text-lg sm:text-sm mb-6 text-[#fff]">Download the App on</p>
+      <p class="text-lg md:text-xl py-2 mb-6 text-[#fff]">Download the App on</p>
       <div class="hero-buttons flex items-center justify-center mb-8">
         <button
           class="bg-white text-black text-md font-medium px-5 py-3 rounded-3xl mr-5 hover:text-[#64748b] transition-colors duration-300"><i
           class="fa-brands fa-android"></i> Google Play</button>
         <button
-          class="bg-[#0fabf3] text-white text-md font-medium px-5 py-3 rounded-3xl ml-5 hover:bg-[#64748b] hover:text-black transition-colors duration-300"><i
+          class="bg-gradient-to-bl from-[#64748b] to-[#0fabf3] text-white text-md font-medium px-5 py-3 rounded-3xl ml-5 hover:bg-[#64748b] hover:text-black transition-colors duration-300"><i
             class="fa-brands fa-app-store-ios"></i> Apple Store</button>
       </div>
     </div>
@@ -85,7 +85,7 @@
             <i class="fa-solid fa-network-wired"></i></p>
         </div>
         <div class="text flex justify-end content-center pr-9 mb-1 text-[#64748b]">
-          <p>Accredited By: CAK</p>
+          <p>Internet of Things</p>
         </div>
 
       </div>
@@ -96,7 +96,7 @@
             <i class="fa-solid fa-robot"></i></p>
         </div>
         <div class="text flex justify-end content-center pr-9 mb-1 text-[#64748b]">
-          <p>Award Winner</p>
+          <p>Artificial Intelligence</p>
         </div>
       </div>
       <div class="grid-item w-80 md:w-80 lg:w-sm h-lg border-[#64748b] border-2 rounded-2xl p-xl">
@@ -106,7 +106,7 @@
             <i class="fa-solid fa-user-nurse"></i></p>
         </div>
         <div class="text flex justify-end content-center pr-9 mb-1 text-[#64748b]">
-          <p>Certified By: MoH</p>
+          <p>Assisted Living</p>
         </div>
       </div>
       <div class="grid-item w-80 md:w-80 lg:w-sm h-lg border-[#64748b] border-2 rounded-2xl p-xl">
@@ -116,7 +116,7 @@
             <i class="fa-solid fa-weight-scale"></i></p>
         </div>
         <div class="text flex justify-end content-center pr-9 mb-1 text-[#64748b]">
-          <p>Tested Sensors</p>
+          <p>Health Sensors</p>
         </div>
       </div>
     </div>
@@ -145,14 +145,8 @@
     <div class="intro self-center">
       <p class="text-xl text-center">⭐⭐⭐⭐⭐</p>
       <p class="text-md text-[#64748b] text-center my-2">Trusted by 20k+ People</p>
-      <h3 class="text-center text-3xl font-bold my-4 text-[#0fabf3]">About Us</h3>
+      <h3 class="text-center text-4xl font-bold my-4 pb-5 text-[#0fabf3]">About Us</h3>
     </div>
-
-    <div class="ceo self-center my-3">
-      <h4 class="text-xl font-semibold text-center">Alexander Plank</h4>
-      <p class="text-[#64748b] text-center text-md">CEO of BitHealth</p>
-    </div>
-
 
     <div
       class="features-company mt-6 mb-8 px-1 mx-5 self-center bg-[#f9fafb] shadow-2xl rounded-2xl lg:grid grid-cols-4 lg:pt-5">
@@ -194,8 +188,8 @@
     </div>
 
     <div
-      class="year-founded rounded-2xl mt-6 mb-8 px-4 mx-5 self-center bg-[#f9fafb] shadow-2xl border-1 border-[#444] rounded-2xl lg:grid grid-cols-2 justify-items-center items-center justify-center">
-      <div class="self-center">
+      class="year-founded rounded-2xl mt-6 mb-8 px-0 mx-5 pt-5 self-center bg-[#f9fafb] shadow-2xl border-1 border-[#444] rounded-2xl lg:grid grid-cols-2 justify-items-center items-center justify-center">
+      <div class="self-center lg:pl-30 pr-0">
         <p class="year pt-4 pb-12 text-lg"> <i class="fa-solid fa-lightbulb"></i> <span class="pl-3">Since 2005</span>
         </p>
         <p class="clients text-5xl font-semibold text-[#0fabf3] py-4">236,547</p>
@@ -214,7 +208,7 @@
           </div>
         </div>
       </div>
-      <div class="img flex justify-center content-center mx-auto lg:self-end">
+      <div class="img flex lg:self-end">
         <img src="./assets/imgs/watches/healhsensors-removebg-preview.png" alt="">
       </div>
     </div>
@@ -223,45 +217,45 @@
 
   <section class="py-12">
     <div class="container mx-auto px-4">
-      <h2 class="text-3xl lg:text-4xl font-bold text-center mb-8 bg-gradient-to-bl from-[#dfb9b9] to-[#0fabf3] bg-clip-text text-transparent">Our Watch Models</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+      <h2 class="text-3xl lg:text-4xl font-bold text-center mb-8 bg-gradient-to-bl from-[#dfb9b9] to-[#0fabf3] bg-clip-text text-transparent">Watch Models</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-15">
 
-        <div class="bg-gray-100 p-6 rounded-2xl text-center">
+        <div class="bg-gray-100 p-6 rounded-2xl text-center shadow-2xl">
           <img src="./assets/imgs/watches/assisted_living-removebg-preview.png" alt="Model 1" class="w-32 sm:w-48 h-32 sm:h-48 mx-auto mb-4">
           <h3 class="text-lg sm:text-2xl font-semibold text-[#080f18]">BitHealth Pro</h3>
           <p class="text-gray-500 text-sm sm:text-base">Designed for advanced health tracking with premium features.</p>
-          <p class="text-lg font-bold mt-4">Ksh 5,999</p>
+          <p class="text-lg font-bold mt-4 text-[#080f18]">Ksh 5,999</p>
         </div>
 
-        <div class="bg-gray-100 p-6 rounded-lg text-center">
+        <div class="bg-gray-100 p-6 rounded-lg text-center shadow-2xl">
           <img src="./assets/imgs/watches/watchfaces-removebg-preview.png" alt="Model 2" class="w-32 sm:w-48 h-32 sm:h-48 mx-auto mb-4">
           <h3 class="text-lg sm:text-2xl font-semibold text-[#080f18]">BitHealth Active</h3>
           <p class="text-gray-500 text-sm sm:text-base">Ideal for fitness enthusiasts with sports tracking capabilities.
           </p>
-          <p class="text-lg font-bold mt-4">Ksh 3,999</p>
+          <p class="text-lg font-bold mt-4 text-[#080f18]">Ksh 3,999</p>
         </div>
-        <div class="bg-gray-100 p-6 rounded-lg text-center">
+        <div class="bg-gray-100 p-6 rounded-lg text-center shadow-2xl">
           <img src="./assets/imgs/watches/4G_smartwatch-removebg-preview.png" alt="Model 3" class="w-32 sm:w-48 h-32 sm:h-48 mx-auto mb-4">
           <h3 class="text-lg sm:text-2xl font-semibold text-[#080f18]">BitHealth Lite</h3>
           <p class="text-gray-500 text-sm sm:text-base">An affordable option with essential health monitoring features.
           </p>
-          <p class="text-lg font-bold mt-4">Ksh 1,499</p>
+          <p class="text-lg font-bold mt-4 text-[#080f18]">Ksh 1,499</p>
         </div>
 
-        <div class="bg-gray-100 p-6 rounded-lg text-center">
-          <img src="./assets/imgs/watches/healhsensors-removebg-preview.png" alt="Model 4" class="w-32 sm:w-48 h-32 sm:h-48 mx-auto mb-4 object-cover">
+        <div class="bg-gray-100 p-6 rounded-lg text-center shadow-2xl">
+          <img src="./assets/imgs/watches/healhsensors-removebg-preview.png" alt="Model 4" class="w-32 sm:w-48 h-32 sm:h-48 mx-auto mb-4 object-cover scale-x-[-1]">
           <h3 class="text-lg sm:text-2xl font-semibold text-[#080f18]">BitHealth Senior</h3>
           <p class="text-gray-500 text-sm sm:text-base">The best option for elderly people to monitor health their conditions.
           </p>
-          <p class="text-lg font-bold mt-4">Ksh 7,499</p>
+          <p class="text-lg font-bold mt-4 text-[#080f18]">Ksh 7,499</p>
         </div>
       </div>
     </div>
-    <div class="container mx-auto px-4 py-12">
+    <div class="container mx-auto px-4 py-20 my-10">
       <h2 class="text-3xl lg:text-4xl font-bold text-center mb-8 bg-gradient-to-bl from-[#dfb9b9] to-[#0fabf3] bg-clip-text text-transparent">Meet Our Team</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-15">
 
-        <div class="bg-gray-100 p-6 rounded-lg text-center">
+        <div class="bg-gray-100 p-6 rounded-lg text-center shadow-2xl">
           <img src="./assets/imgs/team/samuel mwangi.jpg" alt="Samuel Mwangi"
             class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4 object-cover">
           <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">Samuel Mwangi</h3>
@@ -270,7 +264,7 @@
             15 years of experience in the tech industry.</p>
         </div>
 
-        <div class="bg-gray-100 p-6 rounded-lg text-center">
+        <div class="bg-gray-100 p-6 rounded-lg text-center shadow-2xl">
           <img src="./assets/imgs/team/jane-njeri.jpg" alt="Jane Njeri"
             class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4 object-cover">
           <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">Jane Njeri</h3>
@@ -279,7 +273,7 @@
             technology and leads the engineering team.</p>
         </div>
 
-        <div class="bg-gray-100 p-6 rounded-lg text-center">
+        <div class="bg-gray-100 p-6 rounded-lg text-center shadow-2xl">
           <img src="./assets/imgs/team/Yasmin Zawadi.jpg" alt="Team Member 3"
             class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4 object-cover">
           <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">Yasmin Zawadi</h3>
@@ -288,7 +282,7 @@
             standards for health and safety.</p>
         </div>
 
-        <div class="bg-gray-100 p-6 rounded-lg text-center">
+        <div class="bg-gray-100 p-6 rounded-lg text-center shadow-2xl">
           <img src="./assets/imgs/team/samuel mwangi.jpg" alt="Team Member 4"
             class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4 object-cover">
           <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">John Jefferson</h3>
@@ -300,13 +294,12 @@
     </div>
   </section>
 
-  <!-- Prices Section -->
-  <section class="text-black bg-[#fff] flex flex-col py-12 mx-5 justify-center content-center rounded-xl">
+  <section class="text-black bg-[#fff] flex flex-col py-30 mx-5 justify-center content-center rounded-xl">
     <div class="container mx-auto px-4">
       <h2 class="text-3xl lg:text-4xl font-bold text-center mb-8 text-[#0fabf3]">Pricing</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-15">
 
-        <div class="bg-white p-6 rounded-lg shadow-md text-center">
+        <div class="bg-white p-6 rounded-2xl shadow-2xl text-center">
           <h3 class="text-xl sm:text-2xl font-semibold mb-4">Basic Plan</h3>
           <p class="text-3xl sm:text-4xl font-bold mb-4">Ksh 1,900<span class="text-base font-medium">/month</span></p>
           <ul class="text-gray-600 text-sm sm:text-base mb-6">
@@ -315,11 +308,11 @@
             <li class="mb-2">Mobile App Access</li>
             <li class="mb-2">1 Year Warranty</li>
           </ul>
-          <a href="#" class="inline-block bg-blue-600 text-white px-4 sm:px-6 py-2 rounded-lg font-semibold">Choose
+          <a href="#" class="inline-block px-4 sm:px-6 py-2 rounded-xl font-semibold bg-gradient-to-bl from-[#080f18] to-[#0fabf3] text-white hover:text-[#64748b] transition-colors duration-300">Choose
             Plan</a>
         </div>
 
-        <div class="bg-white p-6 rounded-lg shadow-md text-center">
+        <div class="bg-white p-6 rounded-2xl shadow-2xl text-center">
           <h3 class="text-xl sm:text-2xl font-semibold mb-4">Standard Plan</h3>
           <p class="text-3xl sm:text-4xl font-bold mb-4">Ksh 2,900<span class="text-base font-medium">/month</span></p>
           <ul class="text-gray-600 text-sm sm:text-base mb-6">
@@ -328,10 +321,10 @@
             <li class="mb-2">AI-Powered Insights</li>
             <li class="mb-2">2 Years Warranty</li>
           </ul>
-          <a href="#" class="inline-block bg-blue-600 text-white px-4 sm:px-6 py-2 rounded-lg font-semibold">Choose
+          <a href="#" class="inline-block px-4 sm:px-6 py-2 rounded-2xl font-semibold bg-gradient-to-bl from-[#080f18] to-[#0fabf3] text-white hover:text-[#64748b] transition-colors duration-300">Choose
             Plan</a>
         </div>
-        <div class="bg-white p-6 rounded-lg shadow-md text-center">
+        <div class="bg-white p-6 rounded-2xl shadow-2xl text-center">
           <h3 class="text-xl sm:text-2xl font-semibold mb-4">Premium Plan</h3>
           <p class="text-3xl sm:text-4xl font-bold mb-4">Ksh 4,999<span class="text-base font-medium">/month</span></p>
           <ul class="text-gray-600 text-sm sm:text-base mb-6">
@@ -340,10 +333,10 @@
             <li class="mb-2">Personalized Health Coaching</li>
             <li class="mb-2">Lifetime Warranty</li>
           </ul>
-          <a href="#" class="inline-block bg-blue-600 text-white px-4 sm:px-6 py-2 rounded-lg font-semibold">Choose
+          <a href="#" class="inline-block px-4 sm:px-6 py-2 rounded-2xl font-semibold bg-gradient-to-bl from-[#080f18] to-[#0fabf3] text-white hover:text-[#64748b] transition-colors duration-300">Choose
             Plan</a>
         </div>
-        <div class="bg-white p-6 rounded-lg shadow-md text-center">
+        <div class="bg-white p-6 rounded-2xl shadow-2xl text-center">
           <h3 class="text-xl sm:text-2xl font-semibold mb-4">Assisted Plan</h3>
           <p class="text-3xl sm:text-4xl font-bold mb-4">Ksh 6,999<span class="text-base font-medium">/month</span></p>
           <ul class="text-gray-600 text-sm sm:text-base mb-6">
@@ -352,19 +345,19 @@
             <li class="mb-2">Personalized Health Coaching</li>
             <li class="mb-2">Lifetime Warranty</li>
           </ul>
-          <a href="#" class="inline-block bg-blue-600 text-white px-4 sm:px-6 py-2 rounded-lg font-semibold">Choose
+          <a href="#" class="inline-block px-4 sm:px-6 py-2 rounded-2xl font-semibold bg-gradient-to-bl from-[#080f18] to-[#0fabf3] text-white hover:text-[#64748b] transition-colors duration-300">Choose
             Plan</a>
         </div>
       </div>
     </div>
 
-    <div class="container mx-auto px-4 py-12">
+    <div class="container mx-auto px-4 pt-30 pb-20">
       <h2 class="text-3xl lg:text-4xl font-bold text-center mb-8 text-[#0fabf3]">Get In Touch</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
           <h3 class="text-2xl font-semibold mb-4 text-center">Location</h3>
             <div class="w-180 h-80 mx-auto">
-                <div class="map-container shadow-lg">
+                <div class="map-container shadow-2xl">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.846304521725!2d36.79814067577996!3d-1.2647554356046302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1791a3266197%3A0x1b878049a1937f81!2sKipro%20Center%20Dental%20Clinic!5e0!3m2!1sen!2ske!4v1732196627667!5m2!1sen!2ske" width="100%" height="300" style="border:0;" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
@@ -373,11 +366,11 @@
         <div>
           <form action="#" method="POST" class="bg-white p-6 rounded-lg shadow-md">
             <div class="mb-4">
-              <label for="name" class="block text-gray-700 font-semibold mb-2">Your Name</label>
+              <label for="name" class="block text-gray-700 font-semibold mb-2">Name</label>
               <input type="text" id="name" name="name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" required>
             </div>
             <div class="mb-4">
-              <label for="email" class="block text-gray-700 font-semibold mb-2">Your Email</label>
+              <label for="email" class="block text-gray-700 font-semibold mb-2">Email</label>
               <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" required>
             </div>
             <div class="mb-4">
@@ -385,7 +378,7 @@
               <textarea id="message" name="message" rows="4" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" required></textarea>
             </div>
             <div class="text-center">
-              <button type="submit" class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg font-semibold hover:bg-blue-700 transition duration-200">Send Message</button>
+              <button type="submit" class="w-full bg-gradient-to-bl from-[#080f18] to-[#0fabf3] text-white py-2 px-4 rounded-xl font-semibold hover:text-blue-700 hover:text-[#64748b] transition-colors duration-300">Send Message</button>
             </div>
           </form>
         </div>
@@ -398,8 +391,8 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
         <div>
           <h3 class="text-lg sm:text-xl font-bold mb-4 bg-gradient-to-bl from-[#dfb9b9] to-[#0fabf3] bg-clip-text text-transparent">About BitHealth</h3>
-          <p class="text-gray-400 text-sm sm:text-base">BitHealth is revolutionizing health management through
-            innovative smartwatch technology, empowering individuals to monitor their health in real-time.</p>
+          <p class="text-gray-400 text-sm sm:text-base lg:w-55">BitHealth is revolutionizing health management through
+            smartwatch technology, empowering individuals to monitor their health in real-time.</p>
         </div>
         <div>
           <h3 class="text-lg sm:text-xl font-bold mb-4 bg-gradient-to-bl from-[#dfb9b9] to-[#0fabf3] bg-clip-text text-transparent">Quick Links</h3>
@@ -414,7 +407,8 @@
           <h3 class="text-lg sm:text-xl font-bold mb-4 bg-gradient-to-bl from-[#dfb9b9] to-[#0fabf3] bg-clip-text text-transparent">Contact</h3>
           <ul class="text-sm sm:text-base">
             <li><a href="mailto:info@bithealth.com" class="hover:underline">info@bithealth.com</a></li>
-            <li><a href="tel:+123456789" class="hover:underline">+1 234 567 89</a></li>
+            <li><a href="tel:+123456789" class="hover:underline">+254 734 567 891</a></li>
+            <li><a href="tel:+123456789" class="hover:underline">Location: Kipro Centre, Westlands</a></li>
           </ul>
         </div>
         <div>
