frontend: add images in the grids (except airpad pro and nest hub max)

--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
     </div>
 
     <div
-      class="year-founded rounded-2xl mt-6 mb-8 px-0 mx-5 pt-5 self-center bg-[#f9fafb] shadow-2xl border-1 border-[#444] rounded-2xl lg:grid grid-cols-2 justify-items-center items-center justify-center">
-      <div class="self-center lg:pl-30 pr-0">
+      class="year-founded rounded-2xl mt-6 mb-8 px-7 mx-5 pt-5 self-center bg-[#f9fafb] shadow-2xl border-1 border-[#444] rounded-2xl lg:grid grid-cols-2 justify-items-center items-center justify-center">
+      <div class="self-center">
         <p class="year pt-4 pb-12 text-lg"> <i class="fa-solid fa-lightbulb"></i> <span class="pl-3">Since 2005</span>
         </p>
         <p class="clients text-5xl font-semibold text-[#0fabf3] py-4">236,547</p>
@@ -283,7 +283,7 @@
         </div>
 
         <div class="bg-gray-100 p-6 rounded-lg text-center shadow-2xl">
-          <img src="./assets/imgs/team/samuel mwangi.jpg" alt="Team Member 4"
+          <img src="./assets/imgs/team/john-jefferson.jpg" alt="Team Member 4"
             class="w-24 h-24 sm:w-32 sm:h-32 mx-auto rounded-full mb-4 object-cover">
           <h3 class="text-lg sm:text-xl font-semibold text-[#080f18]">John Jefferson</h3>
           <p class="text-gray-500">Marketing Director</p>
