frontend: add working links

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <img src="./assets/imgs/bitHealth-nav.png" alt="BitHealth logo" class="object-cover">
       </a>
       <div class="hidden lg:flex flex-row justify-around text-center shadow-2xl rounded-4xl bg-[#0e151d] px-10 py-5">
-        <a href="#" class="mx-5 text-[#fff] hover:text-[#64748b] transition-colors duration-300 cursor-pointer">
+        <a href="#home" class="mx-5 text-[#fff] hover:text-[#64748b] transition-colors duration-300 cursor-pointer">
           Home</a>
-        <a href="#" class="mx-5 text-[#64748b] hover:text-white transition-colors duration-300 cursor-pointer">About</a>
-        <a href="#"
+        <a href="#about" class="mx-5 text-[#64748b] hover:text-white transition-colors duration-300 cursor-pointer">About</a>
+        <a href="#features"
           class="mx-5 text-[#64748b] hover:text-white transition-colors duration-300 cursor-pointer">Features</a>
-        <a href="#"
+        <a href="#services"
           class="mx-5 text-[#64748b] hover:text-white transition-colors duration-300 cursor-pointer">Services</a>
-        <a href="#" class="mx-5 text-[#64748b] hover:text-white transition-colors duration-300 cursor-pointer">Blog</a>
-        <a href="#"
+        <a href="#pricing" class="mx-5 text-[#64748b] hover:text-white transition-colors duration-300 cursor-pointer">Pricing</a>
+        <a href="#contact"
           class="mx-5 text-[#64748b] hover:text-white transition-colors duration-300 cursor-pointer">Contact</a>
       </div>
 
@@ -55,7 +55,7 @@
     </nav>
   </header>
 
-  <section class="hero mt-5 px-10">
+  <section class="hero mt-5 px-10" id="home">
     <div class="hero-text flex text-center flex-col mx-auto">
       <p
         class="text-5xl md:text-8xl mb-3 bg-gradient-to-bl  from-[#dfb9b9] to-[#0fabf3] bg-clip-text text-transparent leading-normal">
@@ -141,7 +141,7 @@
     </div>
   </section>
 
-  <section class="about text-black bg-[#fff] flex flex-col my-24 py-10 mx-5 justify-center content-center rounded-xl">
+  <section class="about text-black bg-[#fff] flex flex-col my-24 py-10 mx-5 justify-center content-center rounded-xl" id="about">
     <div class="intro self-center">
       <p class="text-xl text-center">⭐⭐⭐⭐⭐</p>
       <p class="text-md text-[#64748b] text-center my-2">Trusted by 20k+ People</p>
@@ -216,7 +216,7 @@
   </section>
 
   <section class="py-12">
-    <div class="container mx-auto px-4">
+    <div class="container mx-auto px-4" id="services">
       <h2 class="text-3xl lg:text-4xl font-bold text-center mb-8 bg-gradient-to-bl from-[#dfb9b9] to-[#0fabf3] bg-clip-text text-transparent">Watch Models</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-15">
 
@@ -294,7 +294,7 @@
     </div>
   </section>
 
-  <section class="text-black bg-[#fff] flex flex-col py-30 mx-5 justify-center content-center rounded-xl">
+  <section class="text-black bg-[#fff] flex flex-col py-30 mx-5 justify-center content-center rounded-xl" id="pricing">
     <div class="container mx-auto px-4">
       <h2 class="text-3xl lg:text-4xl font-bold text-center mb-8 text-[#0fabf3]">Pricing</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-15">
@@ -351,7 +351,7 @@
       </div>
     </div>
 
-    <div class="container mx-auto px-4 pt-30 pb-20">
+    <div class="container mx-auto px-4 pt-30 pb-20" id="contact">
       <h2 class="text-3xl lg:text-4xl font-bold text-center mb-8 text-[#0fabf3]">Get In Touch</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
