frontend: broken links

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     </div>
 
     <div
-      class="year-founded rounded-2xl mt-6 mb-8 px-7 mx-5 pt-5 self-center bg-[#f9fafb] shadow-2xl border-1 border-[#444] rounded-2xl lg:grid grid-cols-2 justify-items-center items-center justify-center">
+      class="year-founded rounded-2xl mt-6 mb-8 px-7 mx-5 pt-5 self-center bg-[#f9fafb] shadow-2xl border-1 border-[#444] rounded-2xl lg:grid grid-cols-2 justify-items-center items-center justify-center" id="features">
       <div class="self-center">
         <p class="year pt-4 pb-12 text-lg"> <i class="fa-solid fa-lightbulb"></i> <span class="pl-3">Since 2005</span>
         </p>
